Fix up author name in copyright and other notices
Former-commit-id: e53ab0ac029e815dead5de05e635d51f7b0f9e0d

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 #
 # Blog Settings
 #
-name: Phil Haack
+author: Phil Haack
 description: You've been Haacked and you like it
 url: http://haacked.com
 title: You've Been Haacked
