--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,8 @@ google_analytics_tracking_id: UA-177588-1
 # Jekyll Settings
 #
 markdown: redcarpet
-pygments: true
+redcarpet:
+  extensions: ["tables"]
 permalink: /archive/:year/:month/:day/:title/
 paginate: 20
 paginate_path: "page/:num"
