Add redirect gem support
Former-commit-id: 6ecac8cf0ca882bf6406eccf71c54ee1e58f558e

--- a/_config.yml
+++ b/_config.yml
@@ -35,3 +35,6 @@ permalink: /archive/:year/:month/:day/:title/
 paginate: 20
 paginate_path: "page/:num"
 category_dir: categories
+
+gems:
+  - jekyll-redirect-from
