Add hard-wrap true
Former-commit-id: a6601f1ff5b4c41f5821ddacbc2a5c9e9657bc4f

--- a/_config.yml
+++ b/_config.yml
@@ -24,6 +24,8 @@ disqus_show_comment_count: true
 # Google Analytics
 google_analytics_tracking_id: UA-177588-1
 
+kramdown:
+  hard_wrap: true
 
 #
 # Jekyll Settings
