--- a/_config.yml
+++ b/_config.yml
@@ -15,6 +15,8 @@ github_repo_url: https://github.com/Haacked/haacked.com/
 
 # Twitter
 twitter_user: haacked
+twitter:
+  username: haacked
 twitter_tweet_button: true
 
 # Disqus Comments
