--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,7 @@ title: You've Been Haacked
 subtitle: ...and you like it
 gravatar_url: https://2.gravatar.com/avatar/cdf546b601bf29a7eb4ca777544d11cd
 subscribe_rss: http://feeds.haacked.com/haacked
+lang: en
 
 # Github repositories
 github_user: haacked
