Implement Jekyll Blog Comments
Following the instructions in https://github.com/damieng/jekyll-blog-comments
to set up haacked.com to use a jekyll+azure based comment system.


Former-commit-id: 881fa955e08dd988fd34c60537084016359a7e58
Former-commit-id: c2ce6abfc8520a32aefa590e1bf26785c9b0adfb
Former-commit-id: fa435ec22fef1907855a83204e9baa87f58d178b [formerly e05009db7744c8f726dac5bb48ccf53d0a868aac]
Former-commit-id: 3626fa66cd1fbdbb3843bc3b2fecbfa07789ee1a

--- a/_config.yml
+++ b/_config.yml
@@ -17,10 +17,6 @@ github_repo_url: https://github.com/Haacked/haacked.com/
 # Twitter
 twitter_user: haacked
 
-# Disqus Comments
-disqus_short_name: haacked
-disqus_show_comment_count: true
-
 # Google Analytics
 google_analytics_tracking_id: UA-177588-1
 
@@ -59,3 +55,30 @@ feed:
 sass:
   sass_dir:          _scss
   style:            :compressed
+
+emptyArray: []
+
+comments:
+  receiver: https://haacked-blog.azurewebsites.net/api/PostComment
+
+authors:
+  haacked:
+    name: haacked
+    email: haacked@gmail.com
+    url: https://haacked.com
+
+defaults:
+  -
+    scope:
+      path: ''
+      type: pages
+    values:
+      layout: page
+      author: haacked
+  -
+    scope:
+      path: '_posts'
+      type: posts
+    values:
+      layout: post
+      author: haacked
