--- a/_data/comments/comments-for-jekyll-blogs/ad66d405.yml
+++ b/_data/comments/comments-for-jekyll-blogs/ad66d405.yml
@@ -1,5 +1,5 @@
 id: ad66d405
 date: 2018-06-25T04:33:07.1602265Z
-name: Phil Haack
+name: haacked
 avatar: https://avatars.io/twitter/@haacked/medium
 message: This is a great idea!
